--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 1999-11-01  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* configure.in: Add AC_SUBST(CONFDIR)
+	Modify message for --with-confdir.
 
 	* conf/Makefile.am (confdir): Use @CONFDIR@.
 
