--- a/po/ja_JP.JIS7.po
+++ b/po/ja_JP.JIS7.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: namazu 2.0\n"
-"POT-Creation-Date: 1999-11-01 23:04+0900\n"
+"POT-Creation-Date: 1999-11-01 23:26+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>\n"
 "Language-Team: Japanese <satoru-t@is.aist-nara.ac.jp>\n"
@@ -24,7 +24,7 @@ msgstr "CGI\033\044\102\044\116\033\050\102 QUERY_STRING \033\044\102\044\054\10
 #: src/conf.c:470
 #, c-format
 msgid "Config:  %s\n"
-msgstr "\033\044\102\100\137\104\152%%\125%%\041%%\044%%\153\033\050\102:  %s\\n"
+msgstr "\033\044\102\100\137\104\152%%\125%%\041%%\044%%\153\033\050\102:  %s\n"
 
 #: src/conf.c:473
 #, c-format
