--- a/po/ja_JP.SJIS.po
+++ b/po/ja_JP.SJIS.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: namazu 2.0\n"
-"POT-Creation-Date: 1999-11-01 23:04+0900\n"
+"POT-Creation-Date: 1999-11-01 23:26+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>\n"
 "Language-Team: Japanese <satoru-t@is.aist-nara.ac.jp>\n"
@@ -24,7 +24,7 @@ msgstr "CGI\202\314 QUERY_STRING \202\252\222\267\202\267\202\254\202\334\202\26
 #: src/conf.c:470
 #, c-format
 msgid "Config:  %s\n"
-msgstr "\220\335\222\350\203\164\203\100\203\103\203\213:  %s\\n"
+msgstr "\220\335\222\350\203\164\203\100\203\103\203\213:  %s\n"
 
 #: src/conf.c:473
 #, c-format
