--- a/tknamazu/ChangeLog
+++ b/tknamazu/ChangeLog
@@ -1,3 +1,9 @@
+1999-11-02  Ken-ichi Hirose <kenzo-@@tama.or.jp>
+
+    * tknamazu.tcl.in: fix man section search regexp.
+
+    * tknamazu.tcl.in: change calc value of header wipe.
+
 1999-10-07  Ken-ichi Hirose <kenzo-@tama.or.jp>
 
 	* tknamazu.tcl.in: Marge current code.
