--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 1999-11-02  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* configure.in: Add codes to prevent to remove Makefile when 
+	doing 'make clean'. [namazu-dev 375]
+
 	* nmz/Makefile.am (INCLUDES): Add "-I../intl" and remove "-I.".
 
 	* acinclude.m4: Import AM_PATH_LISPDIR macro from Lookup
