--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
+1999-11-03  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* acinclude.m4: Modify --with-emacs=EMACS, --with-lispdir=DIR
+	related codes to exclude unsuitable AC_MSG_ERR and messages.
+
 1999-11-03  Rei FURUKAWA  <furukawa@tcp-ip.or.jp>
 
-	* nmzidx.pl: Fixed lockfile related code.  Thanks to Mr. Hiroshi KOMATSU. [namazu-dev 706]
+	* nmzidx.pl: Fixed lockfile related code.  
+	Thanks to Mr. Hiroshi KOMATSU. [namazu-dev 706]
 
 1999-11-02  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
