--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 1999-11-03  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* configure.in (File::MMagic detection codes): Use 
+	"use lib '$PMDIR';".
+
 	* acinclude.m4: Modify --with-emacs=EMACS, --with-lispdir=DIR
 	related codes to exclude unsuitable AC_MSG_ERR and messages.
 
