--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 1999-11-03  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* configure.in: Abolish --with-japanese and --with-lang=LANG.
+	Change order of --with-* options and reindent.
+
+	* acconfig.h: Remove OPT_LANGUAGE.
+
 	* configure.in (File::MMagic detection codes): Use 
 	"use lib '$PMDIR';".
 
