--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 1999-11-03  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* Makefile.am (install-data-local): 
+	$(mkinstalldirs) ${localstatedir}/${PACKAGE}/index
+
+	* configure.in (OPT_INDEXDIR): Use ${localstatedir}/${PACKAGE}/index.
+
 	* src/mknmz.pl.in (init): Implement $LNAG handling.
 
 	* src/mknmz.pl.in, pl/codeconv.pl: Use util::islang().
