--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-11-04  Ryuji Abe  <raeva@t3.rim.or.jp>
+
+	* nmz-config.in: New File.
+	* Makefile.am (bin_SCRIPTS): Entry nmz-config.
+	* configure.in (AC_OUTPUT): Added nmz-config.
+
 1999-11-03  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* namazu.spec.in: Add /usr/var/namazu/*, /usr/etc/namazu/*, 
@@ -49,7 +55,7 @@
 
 	* acinclude.m4: Added libtool related macros from kakasi-2.3.1.
 
-	* nmz/Makefile.am (include_HEADERS): libnamazu.h.
+	* nmz/Makefile.am (include_HEADERS): Entry libnamazu.h.
 	(libnmz_la_LDFLAGS): Set version-info to 0:0:0. Each libtool 
 	library should be started with version infomation of `0:0:0'.
 
