--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-11-04  Masao Takaku  <masao@ulis.ac.jp>
+
+	* src/mknmz.pl.in (parse_options): Fix a bug: can't update
+	NMZ.status at '--update' option specified.
+
 1999-11-04  Ryuji Abe  <raeva@t3.rim.or.jp>
 
 	* nmz-config.in: New File.
