--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-11-05  Masao Takaku  <masao@ulis.ac.jp>
+
+	* src/mknmz.pl.in: Move $EXCLUDE_REGEX related codes from
+	isexcluded() to wanted().
+
 1999-11-04  Masao Takaku  <masao@ulis.ac.jp>
 
 	* src/mknmz.pl.in (parse_options): Fix a bug: can't update
