--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-11-05  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* nmz/Makefile.am: Changed `include_HEADERS' to `pkginclude_HEADERS'.
+
 1999-11-05  Masao Takaku  <masao@ulis.ac.jp>
 
 	* src/mknmz.pl.in: Move $EXCLUDE_REGEX related codes from
