--- a/po/ja_JP.JIS7.po
+++ b/po/ja_JP.JIS7.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: namazu 2.0\n"
-"POT-Creation-Date: 1999-11-01 23:26+0900\n"
+"POT-Creation-Date: 1999-11-08 17:42+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>\n"
 "Language-Team: Japanese <satoru-t@is.aist-nara.ac.jp>\n"
@@ -13,20 +13,12 @@ msgstr ""
 "Content-Type: text/plain; charset=ISO-2022-JP\n"
 "Content-Transfer-Encoding: 8-bit\n"
 
-#: src/cgi.c:66 src/cgi.c:76
-msgid "Invalid idxname."
-msgstr "\033\044\102\111\124\100\065\044\112\033\050\102 idxname \033\044\102\044\116\073\130\104\152\044\107\044\071\033\050\102"
-
-#: src/cgi.c:108 src/cgi.c:119
-msgid "Too long QUERY_STRING"
-msgstr "CGI\033\044\102\044\116\033\050\102 QUERY_STRING \033\044\102\044\054\104\071\044\071\044\056\044\136\044\071\033\050\102"
-
-#: src/conf.c:470
+#: nmz/conf.c:470
 #, c-format
 msgid "Config:  %s\n"
 msgstr "\033\044\102\100\137\104\152%%\125%%\041%%\044%%\153\033\050\102:  %s\n"
 
-#: src/conf.c:473
+#: nmz/conf.c:473
 #, c-format
 msgid ""
 "Default: %s\n"
@@ -41,15 +33,48 @@ msgstr ""
 "\033\044\102\111\070\075\140\044\116\070\100\070\154\033\050\102: %s\n"
 "\033\044\102%%\071%%\063%%\042\067\127\073\073\033\050\102: %s\n"
 
-#: src/conf.c:486
+#: nmz/conf.c:486
 #, c-format
 msgid "Alias:   \"%s\" -> \"%s\"\n"
 msgstr "\033\044\102\112\114\114\076\033\050\102:   \"%s\" -> \"%s\"\n"
 
-#: src/conf.c:495
+#: nmz/conf.c:495
 #, c-format
 msgid "Replace: \"%s\" -> \"%s\"\n"
 msgstr "\033\044\102\103\126\064\071\033\050\102: \"%s\" -> \"%s\"\n"
+
+#: nmz/search.c:708
+msgid "(You don't have a permission to access the index)"
+msgstr "\033\044\102\041\112\045\044\045\163\045\107\045\103\045\057\045\071\044\113\045\042\045\057\045\073\045\071\044\071\044\153\070\042\115\170\044\054\044\042\044\152\044\136\044\073\044\163\041\113\033\050\102"
+
+#: nmz/search.c:715
+msgid " (cannot open this index)\n"
+msgstr " (\033\044\102\045\044\045\163\045\107\045\103\045\057\045\071\044\054\063\053\044\061\044\136\044\073\044\163\044\107\044\067\044\077\033\050\102)\n"
+
+#. if no item available
+#: nmz/wakati.c:233
+msgid ""
+"\t<h2>Error!</h2>\n"
+"<p>Invalid query.</p>\n"
+msgstr ""
+"\t<h2>\033\044\102\045\050\045\151\041\074\033\050\102!</h2>\n"
+"<p>\033\044\102\070\041\072\167\074\060\044\054\111\124\100\065\044\107\044\071\041\043\033\050\102</p>\n"
+
+#: nmz/wakati.c:239
+msgid ""
+"\t<h2>Error!</h2>\n"
+"<p>Too many query tokens.</p>\n"
+msgstr ""
+"\t<h2>\033\044\102\045\050\045\151\041\074\033\050\102!</h2>\n"
+"<p>\033\044\102\070\041\072\167\074\060\044\116\071\140\114\134\044\054\102\077\044\071\044\056\044\136\044\071\041\043\033\050\102</p>\n"
+
+#: src/cgi.c:66 src/cgi.c:76
+msgid "Invalid idxname."
+msgstr "\033\044\102\111\124\100\065\044\112\033\050\102 idxname \033\044\102\044\116\073\130\104\152\044\107\044\071\033\050\102"
+
+#: src/cgi.c:108 src/cgi.c:119
+msgid "Too long QUERY_STRING"
+msgstr "CGI\033\044\102\044\116\033\050\102 QUERY_STRING \033\044\102\044\054\104\071\044\071\044\056\044\136\044\071\033\050\102"
 
 #: src/namazu.c:290
 msgid "\t<p>No document matching your query.</p>\n"
@@ -100,14 +125,6 @@ msgid ""
 msgstr ""
 "\t \033\044\102\070\104\044\116\112\070\075\161\044\054\070\053\044\104\044\053\044\152\044\136\044\067\044\077\041\043\033\050\102</strong></p>\n"
 "\n"
-
-#: src/search.c:708
-msgid "(You don't have a permission to access the index)"
-msgstr "\033\044\102\041\112\045\044\045\163\045\107\045\103\045\057\045\071\044\113\045\042\045\057\045\073\045\071\044\071\044\153\070\042\115\170\044\054\044\042\044\152\044\136\044\073\044\163\041\113\033\050\102"
-
-#: src/search.c:715
-msgid " (cannot open this index)\n"
-msgstr " (\033\044\102\045\044\045\163\045\107\045\103\045\057\045\071\044\054\063\053\044\061\044\136\044\073\044\163\044\107\044\067\044\077\033\050\102)\n"
 
 #: src/usage.c:44
 #, c-format
@@ -177,23 +194,6 @@ msgstr "\033\044\102\073\110\044\044\112\175\033\050\102: namazu [\033\044\102\0
 #: src/usage.c:81
 msgid "Try `namazu --help' for more information.\n"
 msgstr "`namazu --help' \033\044\102\044\107\045\052\045\127\045\067\045\147\045\163\044\116\100\142\114\100\044\054\111\075\074\050\044\065\044\154\044\136\044\071\033\050\102\n"
-
-#. if no item available
-#: src/wakati.c:233
-msgid ""
-"\t<h2>Error!</h2>\n"
-"<p>Invalid query.</p>\n"
-msgstr ""
-"\t<h2>\033\044\102\045\050\045\151\041\074\033\050\102!</h2>\n"
-"<p>\033\044\102\070\041\072\167\074\060\044\054\111\124\100\065\044\107\044\071\041\043\033\050\102</p>\n"
-
-#: src/wakati.c:239
-msgid ""
-"\t<h2>Error!</h2>\n"
-"<p>Too many query tokens.</p>\n"
-msgstr ""
-"\t<h2>\033\044\102\045\050\045\151\041\074\033\050\102!</h2>\n"
-"<p>\033\044\102\070\041\072\167\074\060\044\116\071\140\114\134\044\054\102\077\044\071\044\056\044\136\044\071\041\043\033\050\102</p>\n"
 
 #~ msgid ""
 #~ "\t<h2>Error!</h2>\n"
