--- a/po/ja_JP.SJIS.po
+++ b/po/ja_JP.SJIS.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: namazu 2.0\n"
-"POT-Creation-Date: 1999-11-01 23:26+0900\n"
+"POT-Creation-Date: 1999-11-08 17:42+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>\n"
 "Language-Team: Japanese <satoru-t@is.aist-nara.ac.jp>\n"
@@ -13,20 +13,12 @@ msgstr ""
 "Content-Type: text/plain; charset=Shift_JIS\n"
 "Content-Transfer-Encoding: 8-bit\n"
 
-#: src/cgi.c:66 src/cgi.c:76
-msgid "Invalid idxname."
-msgstr "\225\163\220\263\202\310 idxname \202\314\216\167\222\350\202\305\202\267"
-
-#: src/cgi.c:108 src/cgi.c:119
-msgid "Too long QUERY_STRING"
-msgstr "CGI\202\314 QUERY_STRING \202\252\222\267\202\267\202\254\202\334\202\267"
-
-#: src/conf.c:470
+#: nmz/conf.c:470
 #, c-format
 msgid "Config:  %s\n"
 msgstr "\220\335\222\350\203\164\203\100\203\103\203\213:  %s\n"
 
-#: src/conf.c:473
+#: nmz/conf.c:473
 #, c-format
 msgid ""
 "Default: %s\n"
@@ -41,15 +33,48 @@ msgstr ""
 "\225\127\217\200\202\314\214\276\214\352: %s\n"
 "\203\130\203\122\203\101\214\166\216\132: %s\n"
 
-#: src/conf.c:486
+#: nmz/conf.c:486
 #, c-format
 msgid "Alias:   \"%s\" -> \"%s\"\n"
 msgstr "\225\312\226\274:   \"%s\" -> \"%s\"\n"
 
-#: src/conf.c:495
+#: nmz/conf.c:495
 #, c-format
 msgid "Replace: \"%s\" -> \"%s\"\n"
 msgstr "\222\165\212\267: \"%s\" -> \"%s\"\n"
+
+#: nmz/search.c:708
+msgid "(You don't have a permission to access the index)"
+msgstr "\201\151\203\103\203\223\203\146\203\142\203\116\203\130\202\311\203\101\203\116\203\132\203\130\202\267\202\351\214\240\227\230\202\252\202\240\202\350\202\334\202\271\202\361\201\152"
+
+#: nmz/search.c:715
+msgid " (cannot open this index)\n"
+msgstr " (\203\103\203\223\203\146\203\142\203\116\203\130\202\252\212\112\202\257\202\334\202\271\202\361\202\305\202\265\202\275)\n"
+
+#. if no item available
+#: nmz/wakati.c:233
+msgid ""
+"\t<h2>Error!</h2>\n"
+"<p>Invalid query.</p>\n"
+msgstr ""
+"\t<h2>\203\107\203\211\201\133!</h2>\n"
+"<p>\214\237\215\365\216\256\202\252\225\163\220\263\202\305\202\267\201\102</p>\n"
+
+#: nmz/wakati.c:239
+msgid ""
+"\t<h2>Error!</h2>\n"
+"<p>Too many query tokens.</p>\n"
+msgstr ""
+"\t<h2>\203\107\203\211\201\133!</h2>\n"
+"<p>\214\237\215\365\216\256\202\314\215\200\226\332\202\252\221\275\202\267\202\254\202\334\202\267\201\102</p>\n"
+
+#: src/cgi.c:66 src/cgi.c:76
+msgid "Invalid idxname."
+msgstr "\225\163\220\263\202\310 idxname \202\314\216\167\222\350\202\305\202\267"
+
+#: src/cgi.c:108 src/cgi.c:119
+msgid "Too long QUERY_STRING"
+msgstr "CGI\202\314 QUERY_STRING \202\252\222\267\202\267\202\254\202\334\202\267"
 
 #: src/namazu.c:290
 msgid "\t<p>No document matching your query.</p>\n"
@@ -100,14 +125,6 @@ msgid ""
 msgstr ""
 "\t \214\302\202\314\225\266\217\221\202\252\214\251\202\302\202\251\202\350\202\334\202\265\202\275\201\102</strong></p>\n"
 "\n"
-
-#: src/search.c:708
-msgid "(You don't have a permission to access the index)"
-msgstr "\201\151\203\103\203\223\203\146\203\142\203\116\203\130\202\311\203\101\203\116\203\132\203\130\202\267\202\351\214\240\227\230\202\252\202\240\202\350\202\334\202\271\202\361\201\152"
-
-#: src/search.c:715
-msgid " (cannot open this index)\n"
-msgstr " (\203\103\203\223\203\146\203\142\203\116\203\130\202\252\212\112\202\257\202\334\202\271\202\361\202\305\202\265\202\275)\n"
 
 #: src/usage.c:44
 #, c-format
@@ -177,23 +194,6 @@ msgstr "\216\147\202\242\225\373: namazu [\203\111\203\166\203\126\203\207\203\2
 #: src/usage.c:81
 msgid "Try `namazu --help' for more information.\n"
 msgstr "`namazu --help' \202\305\203\111\203\166\203\126\203\207\203\223\202\314\220\340\226\276\202\252\225\134\216\246\202\263\202\352\202\334\202\267\n"
-
-#. if no item available
-#: src/wakati.c:233
-msgid ""
-"\t<h2>Error!</h2>\n"
-"<p>Invalid query.</p>\n"
-msgstr ""
-"\t<h2>\203\107\203\211\201\133!</h2>\n"
-"<p>\214\237\215\365\216\256\202\252\225\163\220\263\202\305\202\267\201\102</p>\n"
-
-#: src/wakati.c:239
-msgid ""
-"\t<h2>Error!</h2>\n"
-"<p>Too many query tokens.</p>\n"
-msgstr ""
-"\t<h2>\203\107\203\211\201\133!</h2>\n"
-"<p>\214\237\215\365\216\256\202\314\215\200\226\332\202\252\221\275\202\267\202\254\202\334\202\267\201\102</p>\n"
 
 #~ msgid ""
 #~ "\t<h2>Error!</h2>\n"
