--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-11-09  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* src/i18n.{c,h} : Moved to nmz/ directory.
+
+	* Search-Namazu/ : Implemented some functions (currentry not work).
+
 1999-11-08  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* nmz/Makefile.am (INCLUDES): Add -I../nmz
