--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1999-11-10  NOKUBI Takatsugu  <knok@daionet.gr.jp>
 
+	* Search-Namazu/Namazu.xs : Fixed to return array.
+
 	* Search-Namazu/* : Implemented (work but very unstable).
 
 1999-11-09  NOKUBI Takatsugu  <knok@daionet.gr.jp>
