acinclude.m4: Fix lispdir related codes to handle $prefix correctly.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-11-12  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* acinclude.m4: Fix lispdir related codes to handle $prefix correctly.
+
 1999-11-10  NOKUBI Takatsugu  <knok@daionet.gr.jp>
 
 	* Search-Namazu/Namazu.xs : Fixed to return array.
