--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-11-17  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* nmz/hlist.c ({and,not,or}merge): Fixed memory leak.
+
 1999-11-16  NOKUBI Takatsugu  <knok@daionet.gr.jp>
 
 	* lib/Makefile.am, nmz/Makefile.am: Moved regex.{c,h} to 
