--- a/Search-Namazu/ChangeLog
+++ b/Search-Namazu/ChangeLog
@@ -1,3 +1,7 @@
+1999-11-17  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* Namazu.pm: Added default exported symbols.
+
 1999-11-16  NOKUBI Takatsugu  <knok@daionet.gr.jp>
 
 	* Initial version.
