--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-11-17  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* nmz/Makefile.am (libnmz_la_SOURCES): Fix misspelling.
+
 1999-11-17  NOKUBI Takatsugu  <knok@daionet.gr.jp>
 
 	* nmz/hlist.c ({and,not,or}merge): Fixed memory leak.
