--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 1999-11-18  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* nmz/libnamazu.h: Add #include <stdio.h> for FILE struct used in
+	this file.
+
+	* src/namazu.h: Remove #include <stdio.h>
+
 	* nmz/search.c (binsearch): Compare in unsigned.
 
 	* nmz/codeconv.[ch]: s/char/uchar/ adjustment.
