--- a/po/ja_JP.JIS7.po
+++ b/po/ja_JP.JIS7.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: namazu 2.0\n"
-"POT-Creation-Date: 1999-11-18 07:02+0900\n"
+"POT-Creation-Date: 1999-11-18 22:21+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>\n"
 "Language-Team: Japanese <satoru-t@is.aist-nara.ac.jp>\n"
@@ -133,10 +133,9 @@ msgstr ""
 #: src/usage.c:44
 #, c-format
 msgid ""
-"Search Program of Namazu v%s\n"
-"%s\n"
+"namazu of Namazu %s\n"
 "\n"
-"Usage: namazu [options] <query> [index ...] \n"
+"Usage: namazu [options] <query> [index]... \n"
 "    -n, --max=num        set number of documents shown at once.\n"
 "    -w, --whence=num     set first number of documents shown in results.\n"
 "    -l, --list           print results by listing format.\n"
@@ -163,9 +162,9 @@ msgid ""
 "    -v, --version        show the version of namazu and exit.\n"
 "        --help           show this help and exit\n"
 msgstr ""
-"\033\044\102\101\064\112\070\070\041\072\167%%\067%%\071%%\106%%\140\033\050\102 Namazu \033\044\102\044\116\070\041\072\167%%\127%%\155%%\060%%\151%%\140\033\050\102 v%s\n"
-"%s\n"
-"\033\044\102\073\110\044\044\112\175\033\050\102: namazu [options] <query> [index(s)] \n"
+"namazu - Namazu \033\044\102\044\116\070\041\072\167%%\127%%\155%%\060%%\151%%\140\033\050\102 %s\n"
+"\n"
+"\033\044\102\073\110\044\044\112\175\033\050\102: namazu [options] <query> [index]...\n"
 "    -n, --max=num           \033\044\102\060\154\105\131\044\113\111\075\074\050\044\071\044\153\067\157\077\164\033\050\102\n"
 "    -w, --whence=num        \033\044\102\111\075\074\050\044\071\044\153%%\152%%\071%%\110\044\116\100\150\106\054\110\126\071\146\033\050\102\n"
 "    -l, --list              \033\044\102\070\041\072\167\067\153\062\114\044\162\033\050\102 URI\033\044\102\041\046%%\121%%\071\114\076\044\116%%\152%%\071%%\110\044\107\075\120\116\117\033\050\102\n"
@@ -191,11 +190,11 @@ msgstr ""
 "    -v, --version           \033\044\102%%\164%%\041\041\074%%\070%%\147%%\163\044\162\111\075\074\050\044\071\044\153\033\050\102\n"
 "        --help              help \033\044\102\044\162\111\075\074\050\044\071\044\153\033\050\102 (\033\044\102\044\063\044\116\111\075\074\050\033\050\102)\n"
 
-#: src/usage.c:80
-msgid "Usage: namazu [options] <query> [index dir(s)]\n"
-msgstr "\033\044\102\073\110\044\044\112\175\033\050\102: namazu [\033\044\102\045\052\045\127\045\067\045\147\045\163\033\050\102] <\033\044\102\070\041\072\167\074\060\033\050\102> [\033\044\102\045\044\045\163\045\107\045\103\045\057\045\071\033\050\102...]\n"
+#: src/usage.c:79
+msgid "Usage: namazu [options] <query> [index]...\n"
+msgstr "\033\044\102\073\110\044\044\112\175\033\050\102: namazu [\033\044\102\045\052\045\127\045\067\045\147\045\163\033\050\102] <\033\044\102\070\041\072\167\074\060\033\050\102> [\033\044\102\045\044\045\163\045\107\045\103\045\057\045\071\033\050\102]...\n"
 
-#: src/usage.c:81
+#: src/usage.c:80
 msgid "Try `namazu --help' for more information.\n"
 msgstr "`namazu --help' \033\044\102\044\107\045\052\045\127\045\067\045\147\045\163\044\116\100\142\114\100\044\054\111\075\074\050\044\065\044\154\044\136\044\071\033\050\102\n"
 
