--- a/po/namazu.pot
+++ b/po/namazu.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 1999-11-18 17:49+0900\n"
+"POT-Creation-Date: 1999-11-18 22:21+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -123,10 +123,9 @@ msgstr ""
 #: src/usage.c:44
 #, c-format
 msgid ""
-"Search Program of Namazu v%s\n"
-"%s\n"
+"namazu of Namazu %s\n"
 "\n"
-"Usage: namazu [options] <query> [index ...] \n"
+"Usage: namazu [options] <query> [index]... \n"
 "    -n, --max=num        set number of documents shown at once.\n"
 "    -w, --whence=num     set first number of documents shown in results.\n"
 "    -l, --list           print results by listing format.\n"
@@ -154,10 +153,10 @@ msgid ""
 "        --help           show this help and exit\n"
 msgstr ""
 
-#: src/usage.c:80
-msgid "Usage: namazu [options] <query> [index dir(s)]\n"
+#: src/usage.c:79
+msgid "Usage: namazu [options] <query> [index]...\n"
 msgstr ""
 
-#: src/usage.c:81
+#: src/usage.c:80
 msgid "Try `namazu --help' for more information.\n"
 msgstr ""
