Modify --help and --version messages

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 1999-11-19  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* src/usage.c (show_usage): Renamed from show_long_usage()
+	(show_usage): Add a message "Report bugs to <bug-namazu@namazu.org>."
+	(show_version): Reformated.
+
+	* src/message.h: Remove "COPYRIGHT" macro.
+
 	* man/Makefile.am (update-man): s/-N/--no-info/g for clarity.
 
 1999-11-18  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
