--- a/po/ja_JP.JIS7.po
+++ b/po/ja_JP.JIS7.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: namazu 2.0\n"
-"POT-Creation-Date: 1999-11-18 22:21+0900\n"
+"POT-Creation-Date: 1999-11-19 10:25+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>\n"
 "Language-Team: Japanese <satoru-t@is.aist-nara.ac.jp>\n"
@@ -161,6 +161,8 @@ msgid ""
 "    -L, --lang=lang      set language (ja or en)\n"
 "    -v, --version        show the version of namazu and exit.\n"
 "        --help           show this help and exit\n"
+"\n"
+"Report bugs to <bug-namazu@namazu.org>.\n"
 msgstr ""
 "namazu - Namazu \033\044\102\044\116\070\041\072\167%%\127%%\155%%\060%%\151%%\140\033\050\102 %s\n"
 "\n"
@@ -189,12 +191,14 @@ msgstr ""
 "    -L, --lang=lang         \033\044\102%%\141%%\103%%\073\041\074%%\070\044\116\070\100\070\154\044\162\100\137\104\152\044\071\044\153\033\050\102 ja \033\044\102\044\136\044\077\044\117\033\050\102 en\n"
 "    -v, --version           \033\044\102%%\164%%\041\041\074%%\070%%\147%%\163\044\162\111\075\074\050\044\071\044\153\033\050\102\n"
 "        --help              help \033\044\102\044\162\111\075\074\050\044\071\044\153\033\050\102 (\033\044\102\044\063\044\116\111\075\074\050\033\050\102)\n"
+"\n"
+"\033\044\102%%\120%%\060\112\163\071\160\044\117\033\050\102 <bug-namazu@namazu.org> \033\044\102\044\130\044\111\044\046\044\076\033\050\102\n"
 
-#: src/usage.c:79
+#: src/usage.c:82
 msgid "Usage: namazu [options] <query> [index]...\n"
 msgstr "\033\044\102\073\110\044\044\112\175\033\050\102: namazu [\033\044\102\045\052\045\127\045\067\045\147\045\163\033\050\102] <\033\044\102\070\041\072\167\074\060\033\050\102> [\033\044\102\045\044\045\163\045\107\045\103\045\057\045\071\033\050\102]...\n"
 
-#: src/usage.c:80
+#: src/usage.c:83
 msgid "Try `namazu --help' for more information.\n"
 msgstr "`namazu --help' \033\044\102\044\107\045\052\045\127\045\067\045\147\045\163\044\116\100\142\114\100\044\054\111\075\074\050\044\065\044\154\044\136\044\071\033\050\102\n"
 
