--- a/po/ja_JP.SJIS.po
+++ b/po/ja_JP.SJIS.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: namazu 2.0\n"
-"POT-Creation-Date: 1999-11-18 22:21+0900\n"
+"POT-Creation-Date: 1999-11-19 10:25+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>\n"
 "Language-Team: Japanese <satoru-t@is.aist-nara.ac.jp>\n"
@@ -161,6 +161,8 @@ msgid ""
 "    -L, --lang=lang      set language (ja or en)\n"
 "    -v, --version        show the version of namazu and exit.\n"
 "        --help           show this help and exit\n"
+"\n"
+"Report bugs to <bug-namazu@namazu.org>.\n"
 msgstr ""
 "namazu - Namazu \202\314\214\237\215\365\203\166\203\215\203\117\203\211\203\200 %s\n"
 "\n"
@@ -189,12 +191,14 @@ msgstr ""
 "    -L, --lang=lang         \203\201\203\142\203\132\201\133\203\127\202\314\214\276\214\352\202\360\220\335\222\350\202\267\202\351 ja \202\334\202\275\202\315 en\n"
 "    -v, --version           \203\224\203\100\201\133\203\127\203\207\203\223\202\360\225\134\216\246\202\267\202\351\n"
 "        --help              help \202\360\225\134\216\246\202\267\202\351 (\202\261\202\314\225\134\216\246)\n"
+"\n"
+"\203\157\203\117\225\361\215\220\202\315 <bug-namazu@namazu.org> \202\326\202\307\202\244\202\274\n"
 
-#: src/usage.c:79
+#: src/usage.c:82
 msgid "Usage: namazu [options] <query> [index]...\n"
 msgstr "\216\147\202\242\225\373: namazu [\203\111\203\166\203\126\203\207\203\223] <\214\237\215\365\216\256> [\203\103\203\223\203\146\203\142\203\116\203\130]...\n"
 
-#: src/usage.c:80
+#: src/usage.c:83
 msgid "Try `namazu --help' for more information.\n"
 msgstr "`namazu --help' \202\305\203\111\203\166\203\126\203\207\203\223\202\314\220\340\226\276\202\252\225\134\216\246\202\263\202\352\202\334\202\267\n"
 
