--- a/man/mknmz.1
+++ b/man/mknmz.1
@@ -6,7 +6,7 @@ mknmz \- manual page for mknmz of Namazu 1.9.8
 .B mknmz
 [\fIoptions\fR] \fI<target>\fR...
 .SH DESCRIPTION
-mknmz of Namazu 1.9.8
+mknmz 1.9.8, an indexer of Namazu.
 .SS "Target files:"
 .TP
 \fB\-a\fR, \fB\-\-all\fR
@@ -117,9 +117,11 @@ be debug mode.
 .TP
 \fB\-\-help\fR
 show this help and exit.
+.SH "REPORTING BUGS"
+Report bugs to <bug-namazu@namazu.org>.
 .SH COPYRIGHT
 Copyright \(co 1997-1999 Satoru Takabayashi All rights reserved.
-.br
+.PP
 This is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation; either version 2, or (at your option)
