--- a/po/ja.po
+++ b/po/ja.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: namazu 2.0\n"
-"POT-Creation-Date: 1999-11-19 10:25+0900\n"
+"POT-Creation-Date: 1999-11-19 10:40+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>\n"
 "Language-Team: Japanese <satoru-t@is.aist-nara.ac.jp>\n"
@@ -133,7 +133,7 @@ msgstr ""
 #: src/usage.c:44
 #, c-format
 msgid ""
-"namazu of Namazu %s\n"
+"namazu %s, a search program of Namazu.\n"
 "\n"
 "Usage: namazu [options] <query> [index]... \n"
 "    -n, --max=num        set number of documents shown at once.\n"
@@ -164,7 +164,7 @@ msgid ""
 "\n"
 "Report bugs to <bug-namazu@namazu.org>.\n"
 msgstr ""
-"namazu - Namazu の検索プログラム %s\n"
+"namazu %s, Namazu の検索プログラム\n"
 "\n"
 "使い方: namazu [options] <query> [index]...\n"
 "    -n, --max=num           一度に表示する件数\n"
