--- a/po/ja_JP.SJIS.po
+++ b/po/ja_JP.SJIS.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: namazu 2.0\n"
-"POT-Creation-Date: 1999-11-19 10:25+0900\n"
+"POT-Creation-Date: 1999-11-19 10:40+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>\n"
 "Language-Team: Japanese <satoru-t@is.aist-nara.ac.jp>\n"
@@ -131,9 +131,9 @@ msgstr ""
 "\n"
 
 #: src/usage.c:44
-#, c-format
+#, fuzzy, c-format
 msgid ""
-"namazu of Namazu %s\n"
+"namazu %s, a search program of Namazu.\n"
 "\n"
 "Usage: namazu [options] <query> [index]... \n"
 "    -n, --max=num        set number of documents shown at once.\n"
@@ -164,7 +164,7 @@ msgid ""
 "\n"
 "Report bugs to <bug-namazu@namazu.org>.\n"
 msgstr ""
-"namazu - Namazu \202\314\214\237\215\365\203\166\203\215\203\117\203\211\203\200 %s\n"
+"namazu %s, Namazu \202\314\214\237\215\365\203\166\203\215\203\117\203\211\203\200\n"
 "\n"
 "\216\147\202\242\225\373: namazu [options] <query> [index]...\n"
 "    -n, --max=num           \210\352\223\170\202\311\225\134\216\246\202\267\202\351\214\217\220\224\n"
