--- a/man/namazu.1
+++ b/man/namazu.1
@@ -6,7 +6,7 @@ namazu \- manual page for namazu of Namazu 1.9.8
 .B namazu
 [\fIoptions\fR] \fI<query> \fR[\fIindex\fR]...
 .SH DESCRIPTION
-namazu of Namazu 1.9.8
+namazu 1.9.8, a search program of Namazu.
 .TP
 \fB\-n\fR, \fB\-\-max\fR=\fInum\fR
 set number of documents shown at once.
