--- a/po/namazu.pot
+++ b/po/namazu.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 1999-11-19 10:25+0900\n"
+"POT-Creation-Date: 1999-11-19 10:40+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -123,7 +123,7 @@ msgstr ""
 #: src/usage.c:44
 #, c-format
 msgid ""
-"namazu of Namazu %s\n"
+"namazu %s, a search program of Namazu.\n"
 "\n"
 "Usage: namazu [options] <query> [index]... \n"
 "    -n, --max=num        set number of documents shown at once.\n"
