--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 1999-11-19  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* **/*.[ch]: Abolish hairy lines for comments like:
+	/******************************************************
+
 	* pl/usage.pl: Modify usage messages.
 
 	* src/usage.c (show_usage): Renamed from show_long_usage()
