--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,7 @@
 1999-11-19  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
-	* ja.po: Fix usage.
+	* ja.po: Fix usage. 
+	Fix mini_usage.
 
 1999-11-18  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
