--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,22 @@
 
 1999-11-23  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* {src,nmz}/*.c: Modify error handling code with `stat' info.
+	
+	* nmz/libnamazu.h (HLIST): Add a new member `stat'.
+	(HLIST_DATA): Add a new member `stat'.
+	
+	* **/*.c: Use EXIT_FAILURE or EXIT_SUCCESS for an argument of exit();
+
+	* lib/system.h: New file.
+	Define EXIT_FAILURE, EXIT_SUCCESS if neccessary.
+	
+	* nmz/hlist.c (init_data): Abolished.
+
+	* nmz/magic.h: Abolished.  (integrated to libnamazu.h)
+
+1999-11-23  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
 	* src/namazu.h: Import some named constans from libnamazu.h.
 	    PAGE_MAX,RESULT_MAX,CGI_QUERY_MAX,CGI_INDEX_NAME_MAX
 	    CGI_RESULT_NAME_MAX,SUICIDE_TIME
